# EmbedSeg-napari

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
docs/: conf.py  index.rst
embedseg_napari/: __init__.py  _dock_widget.py  test.py  train.py
embedseg_napari/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
embedseg_napari/criterions/: __init__.py  my_loss.py  my_loss_3d.py
embedseg_napari/datasets/: __init__.py
embedseg_napari/models/: BranchedERFNet.py  BranchedERFNet_3d.py  __init__.py
embedseg_napari/utils/: create_dicts.py  glasbey.py  visualize.py
