[metadata]
name = EmbedSeg-napari
version = 0.0.1
author = Manan Lalit
author_email = lalit@mpi-cbg.de
license = BSD-3
url = https://github.com/mlbyml/EmbedSeg-napari
description = Using EmbedSeg with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/mlbyml/EmbedSeg-napari/issues
    Documentation = https://github.com/mlbyml/EmbedSeg-napari#README.md
    Source Code = https://github.com/mlbyml/EmbedSeg-napari
    User Support = https://github.com/mlbyml/EmbedSeg-napari/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    matplotlib
    scipy
    tifffile
    numba
    tqdm
    jupyter
    pandas
    seaborn
    scikit-image
    colorspacious
    itkwidgets
    pytest


[options.entry_points] 
napari.plugin = 
    EmbedSeg-napari = embedseg_napari
